@@ -10,7 +10,7 @@
 <!-- ###PRIVACY_SETTINGS### begin -->
 
 <h2>###LLL:privacy.editSettings###</h2>
-
+###HINT_SAVED###
 <form action="###FORM.ACTION###" method="post">
 
 <ul>
@@ -45,6 +45,10 @@
 </form>
 
 <!-- ###PRIVACY_SETTINGS### end -->
+
+<!-- ###HINT_DATASAVED### begin -->
+<p>###LLL:privacy_hint_saved###</p>
+<!-- ###HINT_DATASAVED### end -->
 
 </body>
 </html>
